# pixel-forge

./: .gitignore  Cargo.toml  FINAL_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE.md  PRD_VERIFICATION_REPORT.md  Pixel_Forge_PRD.md  README.md  test-features.sh
crates/pixelforge-core/: Cargo.toml
crates/pixelforge-core/src/: convert.rs  lib.rs  metadata.rs  resize.rs  transform.rs
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx
web/src/components/: BatchPanel.tsx  FileDropzone.tsx  FormatPanel.tsx  Header.tsx  ImageViewer.tsx  MetadataPanel.tsx  OptimizePanel.tsx
web/src/hooks/: useImageProcessor.ts  useWasm.ts
web/src/lib/: heif.ts  processor.ts
web/src/types/: shims.d.ts
web/src/wasm/: pixelforge.d.ts
